snapshots uz robia farebne fotky a su napojene na chase cameru, vytvoreny snapshots folder

--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -98,7 +98,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=1920,Y=-235)
+NewWindowPosition=(X=0,Y=38)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -125,15 +125,15 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=992)
+LastSize=(X=1914,Y=1032)
 LastExecutedLaunchDevice=Windows@BINGUS
 LastExecutedLaunchName=BINGUS
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=1920,Y=-235)
+MultipleInstancePositions=(X=0,Y=38)
 NewWindowWidth=1914
-NewWindowHeight=992
+NewWindowHeight=1032
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -168,10 +168,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeSkyLightIlluminance=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,VisualizeTSR=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,SelectionOutlineColor0=0,SelectionOutlineColor1=0,SelectionOutlineColor2=0,SelectionOutlineColor3=0,SelectionOutlineColor4=0,SelectionOutlineColor5=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,HeterogeneousVolumes=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,VisualizeInstanceOcclusionQueries=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeLightFunctionAtlas=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapPersistentData=1,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,NaniteMeshes=1,NaniteStreamingGeometry=1,VisualizeGPUSkinCache=0,ShaderPrint=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeSkyLightIlluminance=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,VisualizeTSR=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,SelectionOutlineColor0=0,SelectionOutlineColor1=0,SelectionOutlineColor2=0,SelectionOutlineColor3=0,SelectionOutlineColor4=0,SelectionOutlineColor5=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,HeterogeneousVolumes=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,VisualizeInstanceOcclusionQueries=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeLightFunctionAtlas=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapPersistentData=1,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,NaniteMeshes=1,NaniteStreamingGeometry=1,VisualizeGPUSkinCache=0,ShaderPrint=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",SubstrateVisualizationMode="",GroomVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",GPUSkinCacheVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True,bAllowCinematicControl=True))
 
 [MRU]
-MRUItem0=/Game/Levels/MainMenuMap
-MRUItem1=/Game/Levels/RaceMap
-MRUItem2=/Game/Levels/LV_Testing2
-MRUItem3=/Game/Levels/LVTesting
+MRUItem0=/Game/Levels/LVTesting
+MRUItem1=/Game/Levels/MainMenuMap
+MRUItem2=/Game/Levels/RaceMap
+MRUItem3=/Game/Levels/LV_Testing2
 MRUItem4=/Game/Levels/ConfigurationMenuMap
 MRUItem5=/Game/Levels/OrthogonalMap
 
@@ -307,7 +307,7 @@ UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RudderControls,InputSettings.Bindings.ActionMappings.Rudder Controls,InputSettings.Bindings.ActionMappings.Extra Camera Swapping,InputSettings.Bindings.ActionMappings.Swap To Chase Camera,InputSettings.Bindings.ActionMappings.Swap To Cinematic Camera,InputSettings.Bindings.ActionMappings.DEBUG BOAT SWAP,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RudderControls,InputSettings.Bindings.AxisMappings.RudderAxis,InputSettings.Bindings.AxisMappings.Rudder Axis,InputSettings.Bindings.AxisMappings.Sail Tension Axis,InputSettings.Platforms.InputPlatformSettings_Windows,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 BoxComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
-BPRegatta_C=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
+BPRegatta_C=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 PropertyWrapper=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 SceneComponent=
@@ -433,12 +433,12 @@ Load Control Points From Config_4=StaticMeshComponent.Collision.Collision,SceneC
 Widget=
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenuMap
+LastLevel=/Game/Levels/LVTesting
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Layout.Slot\" "
+Object="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
@@ -1959,13 +1959,13 @@ VerticalBox.Localization=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
@@ -1991,9 +1991,6 @@ RecentAssetEditors=SpriteEditor
 RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegatta.BPRegatta
 OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController
-OpenAssetsAtExit=/Game/Blueprints/UI/ConfigurationMenu.ConfigurationMenu
-OpenAssetsAtExit=/Game/Minimap/MinimapWidget.MinimapWidget
-OpenAssetsAtExit=/Game/Blueprints/UI/MainMenu.MainMenu
 
 [MessageLog]
 LastLogListing=PIE
@@ -2069,13 +2066,13 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Levels/MainMenuMap
-MRUItem1=/Game/Levels/RaceMap
-MRUItem2=/Game/Blueprints/UI/MainMenu
-MRUItem3=/Game/Minimap/MinimapWidget
-MRUItem4=/Game/Blueprints/UI/ConfigurationMenu
-MRUItem5=/Game/Blueprints/Regatta/BPRegattaController
-MRUItem6=/Game/Blueprints/Regatta/BPRegatta
+MRUItem0=/Game/Blueprints/UI/MainMenu
+MRUItem1=/Game/Minimap/MinimapWidget
+MRUItem2=/Game/Blueprints/UI/ConfigurationMenu
+MRUItem3=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem4=/Game/Blueprints/Regatta/BPRegatta
+MRUItem5=/Game/Levels/MainMenuMap
+MRUItem6=/Game/Levels/RaceMap
 MRUItem7=/Game/Blueprints/Regatta/SnapshotsTarget
 MRUItem8=/Game/Blueprints/CinematicCamera/CinematicCameraActor
 MRUItem9=/Game/Map/tutorial_tabel
@@ -2480,8 +2477,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2511,8 +2508,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=2262.000 Y=120.000
-WindowSize=X=1284.000 Y=692.000
+ScreenPosition=X=0.000 Y=26.667
+WindowSize=X=1276.000 Y=694.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2529,7 +2526,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/tisch/OneDrive/Desktop/skola/5_semester/TIS/sailing-simulator/Unreal Engine/Sailing/Content/Levels
+UNR=../../../../../../Users/alzbe/OneDrive/Dokumenty/GitHub/sailing-simulator/Unreal Engine/Sailing/Content/Levels
 BRUSH=C:/Users/micha/Desktop/SCHOOL/UNIVERZITA/3 rok/tis/sailing-simulator/Unreal Engine/Sailing/Content/
 FBX=C:/Users/micha/Desktop/SCHOOL/UNIVERZITA/3 rok/tis/sailing-simulator/Unreal Engine/Sailing/Content/
 FBXAnim=C:/Users/micha/Desktop/SCHOOL/UNIVERZITA/3 rok/tis/sailing-simulator/Unreal Engine/Sailing/Content/
@@ -3686,9 +3683,9 @@ UndoHistoryEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/More Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [InputDebuggingEditor]
 SuppressInputDeviceConnectionChangeNotification=True
